--- a/quick-decision/quickdecision.html
+++ b/quick-decision/quickdecision.html
@@ -19,6 +19,23 @@
     <div id="cabecalho">Computational System Biology Laboratory</div>
 
     <div id="conteudo">
+      <div id="information">
+        <div id="summary">
+          Summary:<br />
+          <span class="description"></span>
+        </div>
+
+        <div id="overall-design">
+          Overall Design:<br />
+          <span class="description"></span>
+        </div>
+
+        <div id="samples">
+          Samples:<br />
+          <span class="description"></span>
+        </div>
+      </div>
+
       <div id="annotators"></div>
     </div>
 
